<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="6dp"
    android:background="#ffffff"
    app:cardCornerRadius="4dp">

    <LinearLayout
    android:id="@+id/llContent"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:weightSum="6">

        <ImageView
            android:id="@+id/imgRestaurantHome"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.3">

            <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/restaurant_name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>


            <TextView
                android:id="@+id/txtRestaurantPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRestaurantName"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:text="@string/restaurant_price"
                android:textColor="#357a38"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2">

            <ImageButton
                android:id="@+id/imgBtnFavourite"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/btn_favourite_default"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/txtRestaurantRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:drawableStart="@drawable/ic_ratings"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:text="@string/restaurant_rating"
                android:textColor="#ffca28"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>